# modelinthemiddle

./: FRAMEWORK_SUMMARY.md  cursor-mcp-framework-config.json  cursor_local_config.json  cursor_mcp_config.json  package-lock.json  package.json  paperless_mcp_config.json
example/: mock-mcp-server.js  test-framework.ts
other/windsurf-project/: README.md  pyproject.toml  requirements.txt  setup.py
other/windsurf-project/examples/: basic_usage.py  mcp_integration.py  mock_mcp_server.py
other/windsurf-project/mitm/: __init__.py  config.py  llm_interface.py  models.py  server.py  tool_discovery.py
other/windsurf-project/model_in_the_middle/: __init__.py  cli.py  client.py  server.py
other/windsurf-project/tests/: test_llm_interface.py  test_server.py  test_tool_discovery.py
src/mcp-framework/: .env.example  .gitignore  GETTING_STARTED.md  LICENSE  README.md  package.json  tsconfig.json
src/mcp-framework/src/model-bridge/: mcp-client.ts  model-bridge.ts
src/mcp-framework/src/simplified-server/: index.ts  simplified-server.ts
src/mcp-framework/src/types/: index.ts
src/model-bridge/: model-bridge.ts
src/simplified-server/: index.ts  simplified-server.ts
src/types/: index.ts
