[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "model-in-the-middle"
version = "0.1.0"
description = "A minimalist framework for MCP server interfaces using local LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.68.0",
    "pydantic>=1.8.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "httpx>=0.23.0",
    "loguru>=0.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.910",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/model-in-the-middle"
Bug Tracker = "https://github.com/yourusername/model-in-the-middle/issues"

[tool.setuptools]
packages = ["mitm"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
addopts = "-v --cov=mitm --cov-report=term-missing"

[coverage.run]
source = ["mitm"]
omit = ["*/tests/*", "*/__init__.py"]

[coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
